--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  crypto: ^3.0.3
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.0
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
@@ -87,3 +90,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+
+
