--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.0
   cupertino_icons: ^1.0.8
-
+  cloud_firestore: ^5.4.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
